public interface Promotion {
    boolean apply(Cart cart);
}
